# SvaliavaWaterSite

./: .env  Cargo.toml  Dockerfile
.github/actions/merge-json-to-env/: action.yml
.github/workflows/: deploy-to-heroku.yml  deploy-to-private-registry.yml  deploy.yml
api_endpoint_core/: Cargo.toml
api_endpoint_core/src/: lib.rs
api_endpoint_derive/: Cargo.toml
api_endpoint_derive/src/: lib.rs
app/: Cargo.toml  askama.toml
app/src/: app.rs  lib.rs
app/src/components/: footer.rs  hero.rs  mod.rs  navbar.rs  pagination.rs
app/src/pages/: home.rs  main.rs  mod.rs
app/src/pages/admin/: mod.rs
app/src/pages/client/: main.rs  mod.rs
app/src/pages/client/contacts/: mod.rs
app/src/pages/client/news/: mod.rs
app/src/pages/client/news/components/: newsitem.rs  searchbar.rs
app/src/pages/contacts/: mod.rs
app/src/pages/news/: mod.rs
app/src/pages/news/components/: mod.rs  newsitem.rs  searchbar.rs
app/src/shared/: mod.rs
app/src/shared/database/entries/: user.rs  users.rs
app/src/shared/server_fns/: errors.rs  mod.rs
app/src/shared/server_fns/auth/: dto.rs  mod.rs
app/src/shared/state/: mod.rs
app/src/shared/templates/: confirm-email.html  mod.rs
backend/: .env  Cargo.toml
backend/src/: config.rs  error.rs  main.rs  server.rs
backend/src/api/: auth.rs  mod.rs  users.rs
backend/src/middleware/: auth.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/repositories/: user_repositoty.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  config.rs  lib.rs  main.rs  router.rs
frontend/src/api/: client.rs  mod.rs
frontend/src/components/: mod.rs  nav.rs
frontend/src/components/auth/: login_form.rs  mod.rs  register_form.rs
frontend/src/hooks/: mod.rs  use_auth.rs
frontend/src/pages/: home.rs  not_found.rs
frontend/src/pages/auth/: login.rs  mod.rs  register.rs
frontend/static/styles/: main.css
migration/: Cargo.toml
migration/src/: m20220101_000001_create_users_table.rs
public/.well-known/acme-challenge/: mhvNoEzMmpozLGyB8uB286TUdpjqgI2sbBEZkh7k_cY
server/: Cargo.toml
server/src/: main.rs
server/src/shared/: mod.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
shared/src/models/: auth.rs  common.rs  mod.rs  user.rs
shared/src/routes/: auth.rs
style/: main.scss
style/components/: footer.scss  navbar.scss  routing-progress.scss
