[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
#leptos
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_image.workspace = true

#logging
tracing.workspace = true

#db
sea-orm = { workspace = true, optional = true }

#templates
askama = { workspace = true, optional = true }

#validation
validator = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

# server leptos
axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }

#error handling
thiserror = { workspace = true }

#hashing
argon2 = { workspace = true, optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_image/hydrate"]
#hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr", 
  "leptos_image/ssr", 
  "dep:leptos_axum", 
  "dep:sea-orm",
  "dep:askama",
  "dep:axum",
  "dep:validator",
  "dep:argon2"
]
#ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

