[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Локальні залежності
shared = { path = "../shared" }
database = { path = "../database" }

# Веб фреймворк та сервер
axum = { version = "0.8.1", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "auth"] }
http = "1.2.0"

# Асинхронність
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Серіалізація/Десеріалізація
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Обробка помилок
thiserror = "2.0.11"
anyhow = "1.0"

# Логування та трейсинг
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Аутентифікація та безпека
jsonwebtoken = "9.3.0"
argon2 = "0.5"

# Конфігурація
dotenv = "0.15"
config = "0.15.5"

# Утиліти для роботи з часом та ID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Валідація
validator = { version = "0.19.0", features = ["derive"] }