[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Локальні залежності
shared = { path = "../shared" }

# Веб фреймворк
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# Стилізація
stylist = { version = "0.13", features = ["yew_integration"] }

# WebAssembly інтеграція
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Веб API та DOM
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Storage",
    "Window",
    "Document",
    "Element",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Location",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration"
] }

# Браузерні утиліти
gloo = { version = "0.11.0", features = ["storage"] }

# Серіалізація
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Асинхронність
futures = "0.3"

# Логування
log = "0.4"
wasm-logger = "0.2"

# Утиліти
chrono = { version = "0.4", features = ["serde", "wasmbind"] }