[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
leptos_integration_utils.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_image = { workspace = true, features = [ "ssr" ]}

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

futures-core = "0.3.31"
futures-util = "0.3.31"

tower = { workspace = true, features = [ "util" ] }
tower-http = { workspace = true, features = ["compression-br", "compression-gzip", "compression-zstd", "timeout", "trace"] }

axum.workspace = true
tokio.workspace = true
