[package]
name = "server"
version = "0.1.0"
edition = "2021"
include = [".env"]

[dependencies]
dotenvy.workspace = true
base64.workspace = true

app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_image = { workspace = true, features = [ "ssr" ]}

tracing.workspace = true
tracing-subscriber.workspace = true

tower = { workspace = true, features = [ "util" ] }
tower-http = { workspace = true, features = ["cors", "compression-br", "compression-gzip", "compression-zstd", "compression-deflate", "timeout", "trace"] }

axum = { workspace = true, features = ["http2"] }
axum-server = { workspace = true, features = ["tls-rustls"] } 
tokio.workspace = true

sea-orm.workspace = true
migration = { path = "../migration" }
