[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
#Кініеві точки
api_endpoint_core = { path = "../api_endpoint_core" }
api_endpoint_derive = { path = "../api_endpoint_derive" }

# Серіалізація
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Валідація та маршрутизація
validator = { version = "0.19.0", features = ["derive"] }

# Обробка помилок
thiserror = "2.0.11"

# Утиліти
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }